<resources>
    <string name="app_name">Expensare</string>
    <string name="authorization_toolbar_title">Authorization</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="login_hint">Login</string>
    <string name="forgot_a_password_text">Forgot a Password?</string>
    <string name="don_t_have_an_account_text">Don\'t have an account?</string>
    <string name="password_hint">Password</string>
    <string name="register_text">Register</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="splash_screen_desc">Splash Screen</string>
    <string name="app_subname">Expense Sharing app</string>
    <string name="who_are_you_title">Who are you?</string>
    <string name="that_s_me_text">That\'s me</string>
    <string name="avatar_picker_title">Avatar Picker</string>
    <string name="avatar_text">Choose an avatar that describes you in the best way!</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="there_no_expense_history_yet_text">There no expense history yet</string>
    <string name="my_grocery_items_text">My Grocery Items</string>
    <string name="group_management_text">Group Management</string>
    <string name="change_group_text">Change Group</string>
    <string name="debt_requests_text">Debt Requests</string>
    <string name="debt_history_text">Debt History</string>
    <string name="controls_title">Controls</string>
    <string name="log_out_text">Log Out</string>
    <string name="name_text">Daniil Hozhenko</string>
    <string name="status_text">Faceless HQ - Owner</string>
    <string name="history_money">-$175</string>
    <string name="history_name_text">Daniil</string>
    <string name="create_manual_debt_lender">user</string>
    <string name="create_manual_debt_debtor">Choose debtor</string>
    <string name="date_text">17.04.2021</string>
    <string name="quantity_history_item">1.5 kg</string>
    <string name="history_item_price">-$17</string>
    <string name="history_item_name">Potato</string>
    <string name="list_price">$17</string>
    <string name="add_expense_title">Add Expense</string>
    <string name="name_of_expense_text">Name of expense</string>
    <string name="amount_text">Amount in $</string>
    <string name="divide_expense_for_text">Divide expense for</string>
    <string name="save_expense_menu_title">Save Expense</string>
    <string name="how_exactly_you_wanna_pay_text">How exactly you want to pay?</string>
    <string name="pay_via_money_button">Pay via money</string>
    <string name="my_debts_title">My Debts</string>
    <string name="create_debt_title">Create Debt</string>
    <string name="compare_arrows_desc">compare arrows</string>
    <string name="debt_for_text">Debt For</string>
    <string name="debt_amount_text">Debt Amount in $</string>
    <string name="submit_button_text">Submit</string>
    <string name="exact_amount_of_debt_text">Exact amount of debt</string>
    <string name="test_name">Daniil</string>
    <string name="pay_via_debt_button_text">Pay via debt</string>
    <string name="pay_via_money_button_text">Pay via money</string>
    <string name="debt_for_content_text">Something</string>
    <string name="debt_for_title">Debt For:</string>
    <string name="debt_payed_button">Debt Paid</string>
    <string name="add_list_item_title">Add list item</string>
    <string name="item_name_text">Item name</string>
    <string name="item_category_text">Item category</string>
    <string name="choose_category_text">Choose category</string>
    <string name="select_store_text">Select Store</string>
    <string name="you_can_enter_it_later_text">You can enter it later</string>
    <string name="add_to_list_button">Add to list</string>
    <string name="finish_shopping_session_button">Finish shopping session</string>
    <string name="add_expenses_button">Add Expenses</string>
    <string name="finalizing_title">Finalizing</string>
    <string name="finalize_text">This items need exact price and quantity</string>
    <string name="confirm_text">Confirm</string>
    <string name="potato_text">Potato</string>
    <string name="price_text">Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="add_new_item_text">Add new item</string>
    <string name="grocery_list_is_empty_text">Grocery List is empty</string>
    <string name="choose_group_title">Choose Group</string>
    <string name="group_members">Daniil, Olya, Ilya, Roman</string>
    <string name="create_group_title">Create Group</string>
    <string name="create_group_text">Create Group</string>
    <string name="group_type_text">Group type</string>
    <string name="group_name_text">Group name</string>
    <string name="next_test_button_text">Next</string>
    <string name="settings_text">Settings</string>
    <string name="debt_text">Debt</string>
    <string name="members_text">Members</string>
    <string name="expenses_text">Expenses</string>
    <string name="delete_text">Delete Faceless HQ group</string>
    <string name="change_group_photo_text">Change group photo</string>
    <string name="change_group_currency_text">Change group currency</string>
    <string name="change_your_color_text">Change your color</string>
    <string name="change_group_name_text">Change group name</string>
    <string name="group_settings_text">Group Settings</string>
    <string name="status_content_text">(Owner)</string>
    <string name="kick_text">Kick</string>
    <string name="change_status_text">Change status</string>
    <string name="group_debt_title">Group Debt</string>
    <string name="debt_group_text">$300</string>
    <string name="to_olya_text">To Olya:</string>
    <string name="faceless_hq_title">Faceless HQ</string>
    <string name="change_your_avatar_text">Change your avatar</string>
    <string name="change_app_theme_text">Change app theme</string>
    <string name="change_your_name_text">Change your name</string>
    <string name="money_text">Money</string>
    <string name="via_text">Via:</string>
    <string name="for_text">For:</string>
    <string name="accept_text">Accept</string>
    <string name="decline_text">Decline</string>
    <string name="requests_title">Requests</string>
    <string name="select_a_store_text">Select a Store</string>
    <string name="stores_text">Stores</string>
    <string name="add_store_text">Add Store</string>
    <string name="store_name_text">Store Name</string>
    <string name="add_your_favorite_store_text">Add your favorite store</string>
    <string name="select_a_category_text">Select a category</string>
    <string name="categories_title">Categories</string>
    <string name="add_item_title">Add Item</string>
    <string name="add_grocery_item_text">Add grocery item</string>
    <string name="add_text">Add</string>
    <string name="item_quantity_text">Item Quantity</string>
    <string name="item_type_text">Item Type</string>
    <string name="vegetable_items_title">Vegetable Items</string>
    <string name="add_vegetable_item_title">Add Vegetable Item</string>
    <string name="walmart_text">Walmart</string>
    <string name="price_per_quantity_text">$15/kg</string>
    <string name="how_should_we_call_you_text">How should we call you?</string>
    <string name="choose_your_avatar_text">Choose your avatar</string>
    <string name="owner">Faceless HQ - Owner</string>
    <string name="how_we_will_divide_it_text">How we will divide it?</string>
    <string name="daniil_text">Daniil</string>
    <string name="set_amount_text">Set Amount</string>
    <string name="divide_equal_text">Divide equal</string>
    <string name="enter_exact_amount_text">Enter Exact amount</string>
    <string name="debt_chart">Debt Chart</string>
    <string name="owed_by">Owed by</string>
    <string name="they_are_waiting_for_debt_return">They are waiting for debt return</string>
    <string name="touch_pie_to_change_debt_status">(touch pie to change debt status)</string>
    <string name="they_need_to_return_debt">They need to return debt</string>
    <string name="enter_e_mail_hint">E-mail</string>
</resources>