<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/abs_toolbar"
        style="@style/Widget.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_menu_30"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/abs_toolbar_title"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faceless_hq_title" />

    </com.google.android.material.appbar.MaterialToolbar>

    <Button
        android:id="@+id/debt_button"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/debt_text"
        app:layout_constraintTop_toBottomOf="@id/abs_toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/members_button"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/members_text"
        app:layout_constraintTop_toTopOf="@id/debt_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/settings_text"
        app:layout_constraintEnd_toStartOf="@id/settings_button"
        app:layout_constraintTop_toBottomOf="@id/debt_button"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>