<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        android:elevation="4dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:civ_border_width="1dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_name"
                android:textSize="20sp"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/debt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_item_price"
                android:textSize="24sp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/red"
                app:layout_constraintTop_toTopOf="@id/debt_for"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/via_text_view"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/debt_for"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_text"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/name_user"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/via_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_text"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/debt_for"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/debt_for_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/debt_for_content_text"
                android:textSize="20sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="@id/debt_for"
                app:layout_constraintStart_toEndOf="@id/debt_for"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/via_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/money_text"
                android:textSize="20sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="@id/via_text_view"
                app:layout_constraintStart_toEndOf="@id/via_text_view"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>